Fixing the alignment and padding of the footer

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,18 @@
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
 .site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
-.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder {
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 1rem;
@@ -51,11 +64,24 @@ body * a {
   .container {
     margin-inline-end: auto;
     margin-inline-start: auto;
-    max-width: 1170px;
+    max-width: 1000px;
     overflow: hidden; } }
 
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
 .site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
-.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder {
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 1rem;
@@ -161,8 +187,21 @@ body > input[type="checkbox"]:checked ~ .site_header .label_menu {
   color: black;
   opacity: 0.5; }
 
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
 .site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
-.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder {
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 1rem;
@@ -248,8 +287,21 @@ picture {
 .masthead_list__items--result {
   color: #000000; }
 
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
 .site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
-.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder {
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 1rem;
@@ -306,8 +358,21 @@ picture {
 .icon_instagram {
   background-image: url("../images/icon_instagram.svg"); }
 
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
 .site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
-.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder {
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
   font-family: 'DM Sans';
   font-style: normal;
   font-size: 1rem;
@@ -373,3 +438,109 @@ picture {
 
 #subscribe_email::placeholder {
   color: rgba(0, 0, 0, 0.5); }
+
+.footer_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin: 0; }
+
+.site_header__lists .site_header__list--items .site_header__list--link, .previous a, .masthead_list__items--result,
+.masthead_list__items--categorie, .information_recommendation, .updates_categorie, .updates_submit, #subscribe_email::placeholder, .footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright, .active {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 24px; }
+
+.masthead-description, .information_description {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: calc(1rem + 2px);
+  line-height: 32px;
+  color: #000000; }
+
+.information_header, .updates_heading {
+  font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 48px;
+  color: #000000;
+  margin: 0; }
+
+.footer {
+  background-color: #FFFFFF; }
+
+.footer_heading {
+  color: #000000; }
+
+.footer_presentation,
+.footer__list--link,
+.image_name,
+.footer_creater_modifier,
+.footer_creater_copyright {
+  font-weight: normal;
+  color: rgba(0, 0, 0, 0.5); }
+
+.active {
+  font-weight: bold;
+  color: #000000; }
+
+.footer__list--link:hover {
+  color: #000000;
+  font-weight: bold; }
+
+.footer_list--items-active {
+  padding-bottom: 16px; }
+
+.footer__lists li + li {
+  padding-top: 8px; }
+
+.image_date {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  color: #000000;
+  line-height: 24px; }
+
+.footer_presentation {
+  padding-top: 23px;
+  padding-bottom: 23px; }
+
+.footer_personal__info {
+  padding-top: 76px;
+  padding-bottom: 79px; }
+
+.footer_images__container {
+  padding-top: 78px;
+  padding-bottom: 70px; }
+
+.footer_woman__images,
+.footer_passage__images {
+  display: flex;
+  flex-direction: row; }
+  .footer_woman__images picture img,
+  .footer_passage__images picture img {
+    border-radius: 10px;
+    transform: scale(0.7); }
+
+.footer_images__lists {
+  margin-inline-start: -1.5rem; }
+  .footer_images__lists div {
+    margin-block-start: 0.5rem; }
+
+.footer_creater {
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  padding-top: 27px;
+  padding-bottom: 29px; }
+  .footer_creater p + p {
+    padding-top: 8px; }
